Created Vulnerability Property view for node details panel

--- a/Munyn/Views/Nodes/NodeDetails/NodeDetailsView.axaml
+++ b/Munyn/Views/Nodes/NodeDetails/NodeDetailsView.axaml
@@ -43,6 +43,10 @@
 			<DataTemplate DataType="properties:NodePropertyCommand">
 				<nodedetails:NodeDetailsPropertyCommandView DataContext="{Binding}"/>
 			</DataTemplate>
+
+			<DataTemplate DataType="properties:NodePropertyVulnerability">
+				<nodedetails:NodeDetailsPropertyVulnerabilityView DataContext="{Binding}"/>
+			</DataTemplate>
 			
 			<DataTemplate DataType="properties:NodePropertyCompromised">
 				<nodedetails:NodeDetailsPropertyCompromisedView DataContext="{Binding}"/>
