--- a/Munyn/Views/Nodes/NodeDetails/Properties/DetailsView/NodeDetailsPropertyVulnerabilitiyView.axaml
+++ b/Munyn/Views/Nodes/NodeDetails/Properties/DetailsView/NodeDetailsPropertyVulnerabilitiyView.axaml
@@ -85,7 +85,7 @@
 
 					</Border>
 					<Border BorderBrush="#c5c5c5" Background="#c5c5c5" BorderThickness="3" CornerRadius="0,0,5,5" Margin="10,0,10,10">
-						<TextBox Margin="0,0,0,0" Text="{Binding Description}" Foreground="Black" VerticalAlignment="Center" Background="Transparent" BorderThickness="0" AcceptsReturn="True" TextWrapping="Wrap"/>
+						<TextBox Margin="0,0,0,0" Text="{Binding Value}" Foreground="Black" VerticalAlignment="Center" Background="Transparent" BorderThickness="0" AcceptsReturn="True" TextWrapping="Wrap"/>
 					</Border>
 				</StackPanel>
 			</Border>
